src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>JS01__JusticeServer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actions_Taken_Advice_Given__c</fullName>
        <label>Actions Taken/ Advice Given</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocate_Staff_Number__c</fullName>
        <label>Advocate/Staff Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Review_Complete__c</fullName>
        <label>Case Review Complete?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Age_at_Case_Close__c</fullName>
        <formula>IF( 
  AND(
     NOT(ISBLANK( Contact.Birthdate )),
     NOT(ISBLANK(JS01__Date_Case_Closed__c))
  ),
  IF( DATE( 2000 , MONTH( Contact.Birthdate ) , DAY( Contact.Birthdate ) ) &lt;= DATE( 2000 , MONTH(  JS01__Date_Case_Closed__c  ) , DAY( JS01__Date_Case_Closed__c ) ),
     YEAR (JS01__Date_Case_Closed__c) - YEAR ( Contact.Birthdate ),
     YEAR (JS01__Date_Case_Closed__c) - YEAR ( Contact.Birthdate) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Age at Case Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_is_open_to_talking_to_media__c</fullName>
        <label>Client is open to talking to media</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Notes__c</fullName>
        <label>Financial Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <label>General Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Good_Story__c</fullName>
        <label>Good Story</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duals Demonstrations issues</fullName>
                </value>
                <value>
                    <fullName>1st MH Appeal State Fair Hearing</fullName>
                </value>
                <value>
                    <fullName>Geographic Expansion Issues</fullName>
                </value>
                <value>
                    <fullName>Healthy families transition issues</fullName>
                </value>
                <value>
                    <fullName>Immigration Status Barriers</fullName>
                </value>
                <value>
                    <fullName>Language Barriers</fullName>
                </value>
                <value>
                    <fullName>LIHP</fullName>
                </value>
                <value>
                    <fullName>Medical: debt and billing</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal managed care</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal share of cost barrier to care</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal: compelling eligibility barrier</fullName>
                </value>
                <value>
                    <fullName>Medi-Cal: essential for consumers</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prescription drug, not in Medicare</fullName>
                </value>
                <value>
                    <fullName>Reimbursement issue</fullName>
                </value>
                <value>
                    <fullName>Seniors/Disabilities in managed care</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes-Board and Care</fullName>
                </value>
                <value>
                    <fullName>Yes- Mental Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_your_income_likely_to_increase__c</fullName>
        <label>Is your income likely to increase?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HCA_No_Yes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Civil_Case_Number__c</fullName>
        <label>Civil Case Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS01__Client_Name__c</fullName>
        <formula>IF( ISBLANK(ContactId) || ISNULL (ContactId), Account.Name , Contact.LastName +&apos;,&apos;+ Contact.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS01__Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Conflicts_Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conflicts Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JS01__Date_Case_Closed__c</fullName>
        <label>Date Case Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JS01__Date_of_Intake__c</fullName>
        <label>Date of Intake</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JS01__External_Overview__c</fullName>
        <inlineHelpText>A high level summary of the case, appropriate for Pro Bono portal</inlineHelpText>
        <label>External Overview</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JS01__Final_Case_Outcome__c</fullName>
        <label>Final Case Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Mixed Result</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Final_Disposition__c</fullName>
        <label>Final Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No LSC Disposition Entered</fullName>
                </value>
                <value>
                    <fullName>Counsel &amp; Advice</fullName>
                </value>
                <value>
                    <fullName>Brief Service</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Insufficient Merit</fullName>
                </value>
                <value>
                    <fullName>Client Withdrew or Didn&apos;t Respond</fullName>
                </value>
                <value>
                    <fullName>Negotiated Settlement (without Litigation)</fullName>
                </value>
                <value>
                    <fullName>Negotiated Settlement (with Litigation)</fullName>
                </value>
                <value>
                    <fullName>Administrative Agency Decision</fullName>
                </value>
                <value>
                    <fullName>Court Decision</fullName>
                </value>
                <value>
                    <fullName>Court Decision - Uncontested</fullName>
                </value>
                <value>
                    <fullName>Court Decision - Contested</fullName>
                </value>
                <value>
                    <fullName>Court Decision - Appeal</fullName>
                </value>
                <value>
                    <fullName>Change in Eligibility Status</fullName>
                </value>
                <value>
                    <fullName>Extensive Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Final_Level_of_Service__c</fullName>
        <label>Final Level of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Served - Brief Service</fullName>
                </value>
                <value>
                    <fullName>Fully Served - Extended Service</fullName>
                </value>
                <value>
                    <fullName>Unable to Serve Fully</fullName>
                </value>
                <value>
                    <fullName>Unable to Serve</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Intake_Questions__c</fullName>
        <label>Intake Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JS01__Location_of_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location of Client</label>
        <referenceTo>JS01__Location__c</referenceTo>
        <relationshipLabel>Cases (Location of Client)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Location_of_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location of Issue</label>
        <referenceTo>JS01__Location__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Mailing_City_as_of_Case_Closed__c</fullName>
        <label>Mailing City as of Case Closed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JS01__Mailing_Country_as_of_Case_Closed__c</fullName>
        <label>Mailing Country as of Case Closed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JS01__Mailing_State_as_of_Case_Closed__c</fullName>
        <label>Mailing State as of Case Closed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JS01__Mailing_Street_as_of_Case_Closed__c</fullName>
        <label>Mailing Street as of Case Closed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JS01__Mailing_Zip_as_of_Case_Closed__c</fullName>
        <label>Mailing Zip as of Case Closed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Adults__c</fullName>
        <label>Number of Adults</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Household_Members__c</fullName>
        <formula>JS01__Number_of_Adults__c + JS01__Number_of_Children__c +  JS01__Number_of_Seniors__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Household Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Number_of_Seniors__c</fullName>
        <label>Number of Seniors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Poverty_Level_With_Deductions__c</fullName>
        <formula>(JS01__Total_Yearly_Income__c -  JS01__Total_Yearly_Deductions__c)  / 
($Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Baseline__c + 
   IF(
      JS01__Number_of_Household_Members__c &gt; 1,
      $Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Additional_Amt_Person__c * (JS01__Number_of_Household_Members__c -1),
      0
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Level (With Deductions)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Poverty_Level__c</fullName>
        <formula>JS01__Total_Yearly_Income__c  / 
($Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Baseline__c + 
   IF(
       JS01__Number_of_Household_Members__c  &gt; 1,
      $Setup.JS01__JusticeServer_Settings__c.JS01__Poverty_Level_Additional_Amt_Person__c * (JS01__Number_of_Household_Members__c -1),
      0
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Poverty Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Pro_Bono_Portal_Status__c</fullName>
        <inlineHelpText>The status of the case on the JusticeServer Portal</inlineHelpText>
        <label>Pro Bono Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available - Public</fullName>
                </value>
                <value>
                    <fullName>Available - Private</fullName>
                </value>
                <value>
                    <fullName>Interest Expressed</fullName>
                </value>
                <value>
                    <fullName>Conflict Passed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Problem_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem Code</label>
        <referenceTo>JS01__Problem_Code__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JS01__Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetName>JS01__Rejection_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>JS01__Special_Requirements__c</fullName>
        <inlineHelpText>Indicate any special requirements the volunteer meet in order to take this case</inlineHelpText>
        <label>Special Requirements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JS01__Stale_Case_Date__c</fullName>
        <inlineHelpText>The date on which this case will be considered stale if no update is provided on the case</inlineHelpText>
        <label>Stale Case Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JS01__Stale_Case_Setting__c</fullName>
        <defaultValue>$Setup.JS01__JusticeServer_Settings__c.JS01__Stale_Case_Default__c</defaultValue>
        <inlineHelpText>The number of days without an update before this case will be considered stale</inlineHelpText>
        <label>Stale Case Setting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Value_of_Hours__c</fullName>
        <label>Total Value of Hours</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Assets__c</fullName>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Deductions__c</fullName>
        <label>Total Yearly Deductions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Total_Yearly_Income__c</fullName>
        <label>Total Yearly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JS01__Trust_Balance__c</fullName>
        <label>Trust Balance</label>
        <summarizedField>JS01__Trust_Funds__c.JS01__Amount__c</summarizedField>
        <summaryForeignKey>JS01__Trust_Funds__c.JS01__Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JS01__Trust_Remainder_Note__c</fullName>
        <label>Trust Remainder Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Local_CMS_Case__c</fullName>
        <label>Local CMS Case #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location_of_Client_HCA__c</fullName>
        <label>Location of Client (HCA)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JS01__County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Issue_HCA__c</fullName>
        <label>Location of Issue (HCA)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JS01__County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_Problem__c</fullName>
        <label>Nature of Problem</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Income_Info__c</fullName>
        <label>No Income Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Income</fullName>
                </value>
                <value>
                    <fullName>Declined to State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Clients_Helped__c</fullName>
        <label>Number of Clients Helped</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Code_HCA__c</fullName>
        <label>Problem Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>52</fullName>
                </value>
                <value>
                    <fullName>53</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>56</fullName>
                </value>
                <value>
                    <fullName>57</fullName>
                </value>
                <value>
                    <fullName>59</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Opened_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Re-Opened By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Case_Closed__c</fullName>
        <label>Reason Case Closed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Counsel and Advice (A)</fullName>
                </value>
                <value>
                    <fullName>Limited Action (B)</fullName>
                </value>
                <value>
                    <fullName>Referred After Legal Assessment (C)</fullName>
                </value>
                <value>
                    <fullName>Insufficient Merit To Proceed (D)</fullName>
                </value>
                <value>
                    <fullName>Client Withdrew or did not return (E)</fullName>
                </value>
                <value>
                    <fullName>Negotiated Settlement without Litigation (F)</fullName>
                </value>
                <value>
                    <fullName>Negotiated Settlement with Litigation (G)</fullName>
                </value>
                <value>
                    <fullName>Administrative Agency Decision (H)</fullName>
                </value>
                <value>
                    <fullName>Court Decision (I)</fullName>
                </value>
                <value>
                    <fullName>Change Eligible Status (J)</fullName>
                </value>
                <value>
                    <fullName>Other (K)</fullName>
                </value>
                <value>
                    <fullName>Extensive Services ( not resulting in Settlement or Court or Administrative Action) (L)</fullName>
                </value>
                <value>
                    <fullName>Restricted (R)</fullName>
                </value>
                <value>
                    <fullName>LSC Ineligible Case (X)</fullName>
                </value>
                <value>
                    <fullName>No Service (Z)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Closed_Other__c</fullName>
        <label>Reason Closed - Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Re_Opened__c</fullName>
        <label>Reason Re-Opened</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>RIGHT(CaseNumber,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Result__c</fullName>
        <label>Resolution/Result</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>New_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_WEEKS:2</value>
        </filters>
        <label>New Cases</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>JS01__JusticeServer</fullName>
        <active>true</active>
        <businessProcess>JS01__JusticeServer</businessProcess>
        <label>JusticeServer</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Lock_the_case_record_after_closure</fullName>
        <active>false</active>
        <description>Lock the case record after closure</description>
        <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISPICKVAL( Status , &quot;Closed&quot;),
    NOT(ISCHANGED(Status))
)</errorConditionFormula>
        <errorMessage>You cannot update the Case once it has been closed</errorMessage>
    </validationRules>
</CustomObject>